# rml

./: .clangd  .gitignore  .readthedocs.yml  CITATION.cff  CMakeLists.txt  COPYING.md  FILESTRUCTURE.md  LICENSE.md  README.md  TODO.md  codecov.yml  pyproject.toml
.github/workflows/: ci.yml
app/: .dir-locals.el  CMakeLists.txt  rml_app.cpp
cmake/: rmlConfig.cmake.in
doc/: CMakeLists.txt  conf.py  index.rst
experiments/: .dir-locals.el  CMakeLists.txt  toy_network.cpp  toy_network.cu
include/rml/: rml.hpp
python/rml/: __init__.py  _rml.cpp
src/: CMakeLists.txt  rml.cpp
tests/: .dir-locals.el  CMakeLists.txt  rml_t.cpp
tests/python/: test_python_bindings.py
