# This section describes the requirements of the build/installation
# process itself. Being able to do this was the original reason to
# introduce pyproject.toml
[build-system]
requires = [
    "scikit-build-core",
    "pybind11[global]",
]
build-backend = "scikit_build_core.build"

# This section provides general project metadata that is used across
# a variety of build tools. Notably, the version specified here is the
# single source of truth for rml's version
[project]
name = "rml"
version = "0.0.1"
description = "An experimental project that implements common deep learning primitives in C++/CUDA, including also bindings for Python use."
readme = "README.md"
maintainers = [
    { name = "Razvan Florian Vasile", email = "atomwalk@duck.com" },
]
requires-python = ">=3.10"
license-files = ["LICEN[CS]E*"]
license = "MIT"

classifiers = [
    "Programming Language :: Python :: C++",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = []

# The configuration for the scikit-build-core build process
[tool.scikit-build]
cmake.version = ">=3.23"
build.verbose = true

[tool.scikit-build.cmake.define]
rml_BUILD_PYTHON = "ON"
rml_BUILD_TESTING = "OFF"
rml_BUILD_DOCS = "OFF"

# The following is the configuration for the pytest test suite
[tool.pytest.ini_options]
testpaths = ["tests/python"]

